:book: Complete READ.ME

--- a/README.Rmd
+++ b/README.Rmd
@@ -1,18 +1,31 @@
+---
+output: github_document
+---
 
 <!-- README.md is generated from README.Rmd. Please edit that file -->
 
+```{r, include = FALSE}
+knitr::opts_chunk$set(
+  collapse = TRUE,
+  comment = "#>",
+  fig.path = "man/figures/README-",
+  out.width = "100%"
+)
+```
+
 # SmaxN
 
-The `SmaxN` package provides a unique function to compute maximisation
-of abundances index. It notably helps to compute the Synchronised maxN
-(SmaxN) based on the use of temporally synchronised cameras.
+The `SmaxN` package provides a unique function to compute maximisation of 
+abundances index. It notably helps to compute the Synchronised maxN (SmaxN) based on
+the use of temporally synchronised cameras.
+
 
 ## Installation
 
-You can install the `SmaxN` package from [GitHub](https://github.com/)
-with:
 
-``` r
+You can install the `SmaxN` package from [GitHub](https://github.com/) with:
+
+```{r, eval = FALSE}
 ## Install < remotes > package (if not already installed) ----
 if (!requireNamespace("remotes", quietly = TRUE)) {
   install.packages("remotes")
@@ -20,13 +33,15 @@ if (!requireNamespace("remotes", quietly = TRUE)) {
 
 ## Install < SmaxN > package from GitHub ----
 remotes::install_github("CmlMagneville/SmaxN", build_vignettes = TRUE)
+
 ```
+
 
 ## Example
 
 This is a basic example which shows you how to solve a common problem:
 
-``` r
+```{r example}
 library(SmaxN)
 
 # Build distance dataframe for the example:
@@ -44,19 +59,5 @@ abund_df_ex <- data.frame("A" = c(0, 1, 3, 7, 2, 2, 3, 0, 6, 2, 0, 1),
 SmaxN::compute.max.abund(dist_df = dist_df_ex, 
                  fish_speed = 1.6, 
                  abund_df   = abund_df_ex)
-#> $SmaxN
-#> [1] 19
-#> 
-#> $maxN
-#> [1] 7
-#> 
-#> $maxN_cam
-#> A B C D 
-#> 7 2 4 6 
-#> 
-#> $maxN_row
-#>  [1] 2 2 3 7 2 6 3 2 6 4 2 4
-#> 
-#> $SmaxN_row
-#> [1] 16
+
 ```
