--- a/README.Rmd
+++ b/README.Rmd
@@ -39,7 +39,9 @@ remotes::install_github("CmlMagneville/SmaxN", build_vignettes = TRUE)
 
 ## Example
 
-This is a basic example which shows you how to solve a common problem:
+In this example, we see how to use the `SmaxN.computation` function of the 
+`SmaxN` package which computes the SmaxN metric and the maxN metrics among other 
+index (for a better explanation, don't hesitate to look at the ["How to compute the SmaxN and other abundance metrics? tutorial"]()) on the [SmaxN website]().
 
 ```{r example}
 library(SmaxN)
@@ -56,8 +58,9 @@ abund_df_ex <- data.frame("A" = c(0, 1, 3, 7, 2, 2, 3, 0, 6, 2, 0, 1),
                           "D" = c(0, 1, 0, 1, 0, 6, 1, 1, 6, 4, 2, 1))
  
 # Run the general function of the package :
-SmaxN::compute.max.abund(dist_df = dist_df_ex, 
-                 fish_speed = 1.6, 
-                 abund_df   = abund_df_ex)
+SmaxN_results <- SmaxN::SmaxN.computation(abund_df = abund_df_ex, 
+                                          speed = 1.6, 
+                                          dist_df = dist_df_ex)
+SmaxN_results
 
 ```
