:earth_africa: Add website link

--- a/README.Rmd
+++ b/README.Rmd
@@ -41,7 +41,7 @@ remotes::install_github("CmlMagneville/SmaxN", build_vignettes = TRUE)
 
 In this example, we see how to use the `SmaxN.computation` function of the 
 `SmaxN` package which computes the SmaxN metric and the maxN metrics among other 
-index (for a better explanation, don't hesitate to look at the ["How to compute the SmaxN and other abundance metrics? tutorial"]()) on the [SmaxN website]().
+index (for a better explanation, don't hesitate to look at the ["How to compute the SmaxN and other abundance metrics? tutorial"]()) on the [SmaxN website](https://cmlmagneville.github.io/SmaxN/).
 
 ```{r example}
 library(SmaxN)
