:bug: No warning left for the vignette

--- a/vignettes/How_to_compute_SmaxN.Rmd
+++ b/vignettes/How_to_compute_SmaxN.Rmd
@@ -1,30 +1,22 @@
 ---
 title: "How_to_compute_SmaxN"
 author: "Camille Magneville"
-date: "20/10/2022"
-output: html_document
+date: "`r Sys.Date()`"
+output: rmarkdown::html_vignette
+vignette: >
+  %\VignetteIndexEntry{How to compute th SmaxN metric?}
+  %\VignetteEngine{knitr::rmarkdown}
+  \usepackage[utf8]{inputenc}
 ---
 
-```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE)
-```
 
-## R Markdown
+The goal of this vignette is to quickly explain the goals of the `SmaxN` metric 
+and how to simply compute it using the `SmaxN` package.
 
-This is an R Markdown document. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For more details on using R Markdown see <http://rmarkdown.rstudio.com>.
 
-When you click the **Knit** button a document will be generated that includes both content as well as the output of any embedded R code chunks within the document. You can embed an R code chunk like this:
 
-```{r cars}
-summary(cars)
-```
+# What is the SmaxN metric about? 
 
-## Including Plots
 
-You can also embed plots, for example:
 
-```{r pressure, echo=FALSE}
-plot(pressure)
-```
-
-Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.
+<span style="color: lightseagreen;">A mobile individual can not be in two places at the same time</span>
